--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+tr:nth-child(even) {
+	color: #fff;
+}
+
+tr:nth-child(even) td:first-of-type {
+	background-color: #000;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+tr:nth-child(even) td:last-of-type {
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	background-color: #000;
+}
+tr:nth-child(even) td {
+	background-color: #000;
+}
